exports[`PhotoBoard component should render correctly a loading view if isFetching is true 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    loadingType="photos_fetching" />
</div>
`;

exports[`PhotoBoard component should render correctly a loading view if isFirstFetch is true 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    emptyType="photos" />
</div>
`;

exports[`PhotoBoard component should render correctly a loading view if isIndexing is true 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    loadingType="photos_indexing" />
</div>
`;

exports[`PhotoBoard component should render correctly a loading view if isWorking is true 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    loadingType="photos_upload" />
</div>
`;

exports[`PhotoBoard component should render correctly a timeline of photos according a photos array 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    emptyType="photos" />
</div>
`;

exports[`PhotoBoard component should render correctly an empty view if photos is empty 1`] = `
<div
  className=""
  role="contentinfo">
  <_translate
    emptyType="photos" />
</div>
`;
